--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
   
   <div class="col-sm-12 col-md-6">
     <div class="well-sm">
-      <h3><li><a href="{{ site.baseurl }}/docs/mpsl/0">1. Mathematical Principles of Statistical Learning</a></li></h3>
+      <h3><a href="{{ site.baseurl }}/docs/mpsl/0">1. Mathematical Principles of Statistical Learning</a></h3>
       <ul>
         <li><a href="{{ site.baseurl }}/docs/mpsl/0100"> 1. Elementary Probability Theory </a></li>
         <li><a href="{{ site.baseurl }}/docs/mpsl/0200"> 2. Norm and Hilbert spaces</a></li>
@@ -80,7 +80,7 @@ layout: default
       </ul>
     </div>
     <div class="well-sm">
-      <h3><li><a href="{{ site.baseurl }}/docs/npb/0">2. Nonparametric Bayesian (작업중)</a></li></h3>
+      <h3><a href="{{ site.baseurl }}/docs/npb/0">2. Nonparametric Bayesian (작업중)</a></h3>
       <ul>
         <li><a href="{{ site.baseurl }}/docs/npb/0100">1. Terminology </a></li>
         <li><a href="{{ site.baseurl }}/docs/npb/0200">2. Clustering and the Dirichlet Process </a></li>
@@ -93,7 +93,7 @@ layout: default
       </ul>
     </div>
     <div class="well-sm">
-      <h3><li><a href="{{ site.baseurl }}/docs/mpt/0">3. Advanced Topics in Modern Probability (작업중)</a></li></h3>
+      <h3><a href="{{ site.baseurl }}/docs/mpt/0">3. Advanced Topics in Modern Probability (작업중)</a></h3>
       <ul>
         <li><a href="{{ site.baseurl }}/docs/mpt/0100">1. Ito Formula and Stochastic Calculus </a></li>
         <li><a href="{{ site.baseurl }}/docs/mpt/0200">2. SDE Theory </a></li>
