--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: All of SL
       <h3>All of <span style="color:blue">S</span>tatistical <span style="color:blue">L</span>earning</h3>
       <p> by <span style="color:blue">S</span>ungbin <span style="color:blue">L</span>im </p>
       <p>
- 	      <a href="https://www.dropbox.com/s/huik76zchc9n5dl/CV_sungbin.pdf?dl=0" target="_blank"><img src="profile_0.png" width=170 height=170 border="0"></a>
+ 	      <a href="https://www.dropbox.com/s/huik76zchc9n5dl/CV_sungbin.pdf?dl=0" target="_blank"><img src="site.baseurl/profile_0.png" width=170 height=170 border="0"></a>
       </p>
     </div>
   
