--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ title: All of SL
       {% endif %}
     {% endfor %}
     {% if paginator.next_page %}
-    <li><a href="/page{{ paginator.next_page }}">Next</a></li>
+    <li><a href="/page{{ paginator.next_page | prepend: site.baseurl | replace: '//', '/'}}">Next &raquo;</a></li>
     {% else %}
     <li><span class="disabled">Next</span></li>
     {% endif %}
