--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: All of SL
       <h3>All of <span style="color:blue">S</span>tatistical <span style="color:blue">L</span>earning</h3>
       <p> by <span style="color:blue">S</span>ungbin <span style="color:blue">L</span>im </p>
       <p>
- 	      <a href="https://www.dropbox.com/s/huik76zchc9n5dl/CV_sungbin.pdf?dl=0" target="_blank"><img src="{{site.baseurl/}}profile_0.png" width=170 height=170 border="0"></a>
+ 	      <a href="https://www.dropbox.com/s/huik76zchc9n5dl/CV_sungbin.pdf?dl=0" target="_blank"><img src="{{site.baseurl}}/profile_0.png" width=170 height=170 border="0"></a>
       </p>
     </div>
   
@@ -38,7 +38,7 @@ title: All of SL
       {% if paginator.previous_page == 1 %}
       <li><a href="/">Prev</a></li>
       {% else %}
-      <li><a href="/page{{ paginator.previous_page | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
+      <li><a href="/page{{ paginator.previous_page | prepend: site.baseurl | replace: '//', '/' }}">Prev</a></li>
       {% endif %}
     {% else %}
     <li><span class="disabled">Prev</span></li>
@@ -56,7 +56,7 @@ title: All of SL
       {% endif %}
     {% endfor %}
     {% if paginator.next_page %}
-    <li><a href="/page{{ paginator.next_page | prepend: site.baseurl | replace: '//', '/'}}">Next &raquo;</a></li>
+    <li><a href="/page{{ paginator.next_page | prepend: site.baseurl | replace: '//', '/'}}">Next</a></li>
     {% else %}
     <li><span class="disabled">Next</span></li>
     {% endif %}
