--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: All of SL
       {% if paginator.previous_page == 1 %}
       <li><a href="/">Prev</a></li>
       {% else %}
-      <li><a href="/page{{ paginator.previous_page | prepend: site.baseurl | replace: '//', '/' }}">Prev</a></li>
+      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">Prev</a></li>
       {% endif %}
     {% else %}
     <li><span class="disabled">Prev</span></li>
@@ -56,7 +56,7 @@ title: All of SL
       {% endif %}
     {% endfor %}
     {% if paginator.next_page %}
-    <li><a href="/page{{ paginator.next_page | prepend: site.baseurl | replace: '//', '/'}}">Next</a></li>
+    <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next</a></li>
     {% else %}
     <li><span class="disabled">Next</span></li>
     {% endif %}
