--- a/index.html
+++ b/index.html
@@ -33,29 +33,37 @@ title: All of SL
       </ul>
 
   <!-- Pagination links -->
+  {% if paginator.total_pages > 1 %}
   <ul class="pagination clearfix">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
-  {% else %}
-    <span>&laquo; Prev</span>
-  {% endif %}
+    {% if paginator.previous_page %}
+      {% if paginator.previous_page == 1 %}
+      <li><a href="/">Prev</a></li>
+      {% else %}
+      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">Prev</a></li>
+      {% endif %}
 
-  {% for page in (1..paginator.total_pages) %}
-    {% if page == paginator.page %}
-      <em>{{ page }}</em>
-    {% elsif page == 1 %}
-      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
     {% else %}
-      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+    <li><span class="disabled">Prev</span></li>
     {% endif %}
-  {% endfor %}
-
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
-  {% else %}
-    <span>Next &raquo;</span>
-  {% endif %}
+    {% if paginator.page == 1 %}
+    <li><span class="active">1</span></li>
+    {% else %}
+    <li><a href="/">1</a></li>
+    {% endif %}
+    {% for count in (2..paginator.total_pages) %}
+      {% if count == paginator.page %}
+      <li><span class="active">{{ count }}</span></li>
+      {% else %}
+      <li><a href="/page{{ count }}">{{ count }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if paginator.next_page %}
+    <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next</a></li>
+    {% else %}
+    <li><span class="disabled">Next</span></li>
+    {% endif %}
   </ul>
+  {% endif %}
 
 {% if paginator.total_pages > 1 %}
 <ul class="pagination">
