--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: All of SL
       {% if paginator.previous_page == 1 %}
       <li><a href="/">Prev</a></li>
       {% else %}
-      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">Prev</a></li>
+      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
       {% endif %}
 
     {% else %}
@@ -58,7 +58,7 @@ title: All of SL
       {% endif %}
     {% endfor %}
     {% if paginator.next_page %}
-    <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next</a></li>
+    <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a></li>
     {% else %}
     <li><span class="disabled">Next</span></li>
     {% endif %}
