--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: All of SL
   <ul class="pagination clearfix">
     {% if paginator.previous_page %}
       {% if paginator.previous_page == 1 %}
-      <li><a href="/">Prev</a></li>
+      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">Prev</a></li>
       {% else %}
       <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
       {% endif %}
