--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: All of SL
   <ul class="pagination clearfix">
     {% if paginator.previous_page %}
       {% if paginator.previous_page == 1 %}
-      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">Prev</a></li>
+      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
       {% else %}
       <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
       {% endif %}
@@ -65,7 +65,7 @@ title: All of SL
   </ul>
   {% endif %}
 
-{% if paginator.total_pages > 1 %}
+<!--{% if paginator.total_pages > 1 %}
 <ul class="pagination">
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
@@ -90,6 +90,7 @@ title: All of SL
   {% endif %}
 </ul>
 {% endif %}
+-->
 
 <!--        <nav class="pagination" role="navigation">
   <p>
