--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: All of SL
     {% if paginator.page == 1 %}
     <li><span class="active">1</span></li>
     {% else %}
-    <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">1</a></li>
+    <li><a href="">1</a></li>
     {% endif %}
     {% for count in (2..paginator.total_pages) %}
       {% if count == paginator.page %}
