--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ title: All of SL
     <li><span class="active">1</span></li>
     {% else %}
     <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">1</a></li>
+    <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' | replace; ':num', count }}">test</a></li>
     {% endif %}
     {% for count in (2..paginator.total_pages) %}
       {% if count == paginator.page %}
