--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ title: All of SL
     <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">1</a></li>
     {% endif %}
 
-    <!-- 테스트 1-->
-    <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"> 1 / {paginator.total_pages} </a></li> 
+    <!-- 테스트 1
+    <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"> 1 / {paginator.total_pages} </a></li> -->
 
-    <!-- 테스트 2-
+    <!-- 테스트 2
     {% for count in (2..paginator.total_pages) %}
       {% if count == paginator.page %}
       <li><span class="active">{{ count }}</span></li>
