--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: All of SL
     {% endif %}
 
     <!-- 테스트 1-->
-    <!--<li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"> 1 / {paginator.total_pages} </a></li> -->
+    <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"> 1 / {paginator.total_pages} </a></li>
 
     <!-- 테스트 2-->
     {% for count in (2..paginator.total_pages) %}
