--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ title: All of SL
     {% else %}
     <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">1</a></li>
     {% endif %}
-    <li>Page <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{paginator.page}}</a>of <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', paginator.total_pages}}">{{paginator.total_pages}}</a></li>
+    <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{paginator.page}}</a></li>
+    <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', paginator.total_pages}}">{{paginator.total_pages}}</a></li>
   <!--
     {% for count in (2..paginator.total_pages) %}
       {% if count == paginator.page %}
