--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@ title: All of SL
         <li><a href="{{ site.baseurl }}/docs/mpsl/0100"> 1. Elementary Probability Theory </a></li>
         <li><a href="{{ site.baseurl }}/docs/mpsl/0200"> 2. Norm and Hilbert spaces</a></li>
         <li><a href="{{ site.baseurl }}/docs/mpsl/0300"> 3. SVM and Kernel Methods </a></li>
+        <li><a href="{{ site.baseurl }}/docs/mpsl/0400"> 4. Regularization </a></li>
+        <li><a href="{{ site.baseurl }}/docs/mpsl/0500"> 5. 작성중.. </a></li>
       </ul>
     </div>
     <div class="well-sm">
