--- a/index.html
+++ b/index.html
@@ -153,39 +153,22 @@ title: All of SL
   
   <div class="col-sm-12 col-md-6">
     <div class="well-sm">
-      <h3><a href="{{ site.baseurl }}/docs/mpsl/0">1. Mathematical Principles of Statistical Learning</a></h3>
+      <h3><a href="{{ site.baseurl }}/docs/sml/0">1. Statistical Machine Learning</a></h3>
       <ul>
-        <li><a href="{{ site.baseurl }}/docs/mpsl/0100"> 1. Elementary Probability Theory </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpsl/0200"> 2. Norm and Hilbert spaces</a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpsl/0300"> 3. SVM and Kernel Methods </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpsl/0400"> 4. Regularization </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpsl/0500"> 5. 작성중.. </a></li>
+        <li><a href="{{ site.baseurl }}/docs/sml/0100"> 1. Mixture Models </a></li>
+        <li><a href="{{ site.baseurl }}/docs/sml/0200"> 2. Variational Methods </a></li>
+        <li><a href="{{ site.baseurl }}/docs/sml/0300"> 3. Nonparametric Bayesian </a></li>
+        <li><a href="{{ site.baseurl }}/docs/sml/0400"> 4. Causal Inference </a></li>
+        <li><a href="{{ site.baseurl }}/docs/sml/0500"> 5. 작성중.. </a></li>
       </ul>
     </div>
     <div class="well-sm">
-      <h3><a href="{{ site.baseurl }}/docs/npb/0">2. Nonparametric Bayesian (작업중)</a></h3>
+      <h3><a href="{{ site.baseurl }}/docs/mt/0">2. Miscellaneous Topics</a></h3>
       <ul>
-        <li><a href="{{ site.baseurl }}/docs/npb/0100">1. Terminology </a></li>
-        <li><a href="{{ site.baseurl }}/docs/npb/0200">2. Clustering and the Dirichlet Process </a></li>
-        <li><a href="{{ site.baseurl }}/docs/npb/0300">3. Latent features and the Indian buffet process </a></li>
-        <li><a href="{{ site.baseurl }}/docs/npb/0400">4. Regression and the Gaussian process </a></li>
-        <li><a href="{{ site.baseurl }}/docs/npb/0500">5. Models as bulding blocks </a></li>
-        <li><a href="{{ site.baseurl }}/docs/npb/0600">6. Exchangeability </a></li>
-        <li><a href="{{ site.baseurl }}/docs/npb/0700">7. Posterior distributions </a></li> 
-        <li><a href="{{ site.baseurl }}/docs/npb/0800">8. Random measures </a></li> 
-      </ul>
-    </div>
-    <div class="well-sm">
-      <h3><a href="{{ site.baseurl }}/docs/mpt/0">3. Advanced Topics in Modern Probability (작업중)</a></h3>
-      <ul>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0100">1. Ito Formula and Stochastic Calculus </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0200">2. SDE Theory </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0300">3. Markov process </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0400">4. Feynman-Kac formula </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0500">5. Diffusion process </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0600">6. Linear and Nonlinear Filtering </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0700">7. Optimal Control </a></li>
-        <li><a href="{{ site.baseurl }}/docs/mpt/0800">8. Hamilton-Jacobi-Bellman Equation </a></li>
+        <li><a href="{{ site.baseurl }}/docs/mt/0100">1. Normalizing Flows </a></li>
+        <li><a href="{{ site.baseurl }}/docs/mt/0200">2. Graph Neural Network </a></li>
+        <li><a href="{{ site.baseurl }}/docs/mt/0300">3. 3D Machine Learning </a></li>
+        <li><a href="{{ site.baseurl }}/docs/mt/0400">4. Active Learning </a></li>
       </ul>
     </div>    
   </div>
