--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: All of Bayesian
+title: Bayesian tour
 ---
 
 
@@ -10,8 +10,8 @@ title: All of Bayesian
 <div class="row">
   <div class="col-sm-12 col-md-6">
     <div class="well-sm">
-      <h3>All of Bayesian Statistics & 
-      <p> by Sungbin Lim & Joonsuk Park
+      <h3>Bayesian Statistics & Learning</h3>
+      <p> by Joonsuk Park & Sungbin Lim</p>
       <p>
  	      <a href="https://www.dropbox.com/s/huik76zchc9n5dl/CV_sungbin.pdf?dl=0" target="_blank"><img src="{{site.baseurl}}/profile_00.jpg" width=170 height=170 border="0"></a>
       </p>
